kafka-manager/k8s/kafka-mon-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-dhc-kafka-mon
  namespace: analytics
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip

spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: kafka-mon-svc
          servicePort: 8080
        path: /kafka-mon
